fix: SonarQube CRITICAL+MAJOR issues, DX improvements, .gitignore scannerwork